--- a/pages/about/about.wxml
+++ b/pages/about/about.wxml
@@ -3,7 +3,7 @@
   <view class="main">
     <h2 class="h2-head">更新记录</h2>
     <view class="update-log">
-      <ul>
+      <ul class="log">
         <li>1.0 全文字版本，图片版很快更新</li>
         <li>1.1 加上图片， 准备更新职业和种族</li>
       </ul>
