--- a/pages/about/about.wxss
+++ b/pages/about/about.wxss
@@ -21,3 +21,13 @@
 .update-log{
   color: darkslategray;
 }
+
+.log{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 1em 0;
+}
+.log>li{
+  margin-bottom: 0.4em;
+}
